# tagteam

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  ai-handoff.yaml  pyproject.toml  setup.sh  tagteam.yaml
.claude/skills/: decide.md  escalate.md  handoff-cycle.md  handoff-decide.md  handoff-escalate.md  handoff-handoff.md  handoff-implement.md  handoff-phase.md  handoff-plan.md  handoff-review.md  handoff-status.md  handoff-sync.md  handoff.md  implement.md  phase.md  plan.md  review.md  status.md  sync.md
.github/workflows/: publish.yml
.tagteam/legacy/: iterm-cold-launch-followup_impl_rounds.jsonl  iterm-cold-launch-followup_plan_rounds.jsonl  iterm-cold-launch-followup_plan_status.json  lead-amend-action_impl_rounds.jsonl  lead-amend-action_impl_status.json  lead-amend-action_plan_rounds.jsonl  lead-amend-action_plan_status.json  nested-project-disambiguation_impl_rounds.jsonl  nested-project-disambiguation_plan_status.json  phase-28-stage-2-db-readers_plan_rounds.jsonl  phase-28-stage-2-db-readers_plan_status.json  phase-28-step-b-autoexport_plan_rounds.jsonl  saloon-launchpad_plan_rounds.jsonl  stale-state-overlay-fix_impl_rounds.jsonl  stale-state-overlay-fix_impl_status.json  stale-state-overlay-fix_plan_status.json  unified-state-command_impl_status.json
ai_handoff/: __init__.py  __main__.py  cli.py  config.py  cycle.py  iterm.py  migrate.py  parser.py  registry.py  roadmap.py  server.py  session.py  setup.py  state.py  templates.py  watcher.py
ai_handoff/data/: workflows.md
ai_handoff/tui/: __init__.py  __main__.py  app.py  characters.py  clock_widget.py  conversation.py  dialogue.py  handoff_reader.py  map_data.py  map_widget.py  review_dialogue.py  review_replay.py  scene.py  sound.py  state_watcher.py  status_bar.py
docs/: handoff-stage-2-resume.md  roadmap.md  stale-state-overlay-fix-2026-03-22.md  sync_state.md  tagteam-2.0-proposal.md  windows-compatibility-notes.md  workflows.md
docs/design/: configurable-agents-design.md  handoff-performance-recommendations.md
docs/handoffs/: automated-orchestration_impl_feedback.md  automated-orchestration_impl_handoff.md  automated-orchestration_plan_feedback.md  automated-orchestration_plan_handoff.md  configurable-agents-design_plan.md  configurable-agents-design_plan_feedback.md  configurable-agents-init_impl_feedback.md  configurable-agents-init_impl_handoff.md  configurable-agents-init_plan_feedback.md  configurable-agents-init_plan_handoff.md  cycle-baseline-snapshot_impl.md  cycle-baseline-snapshot_impl_rounds.jsonl  cycle-baseline-snapshot_impl_status.json  cycle-baseline-snapshot_plan.md  cycle-baseline-snapshot_plan_rounds.jsonl  cycle-baseline-snapshot_plan_status.json  cycle-storage-cli_impl_cycle.md  cycle-storage-cli_plan_cycle.md  dashboard-tui-polish_impl_cycle.md  dashboard-tui-polish_plan_cycle.md  iterm-cold-launch-followup_impl.md  iterm-cold-launch-followup_impl_status.json  iterm-cold-launch-followup_plan.md  lead-amend-action_impl.md  lead-amend-action_plan.md  migration-and-advanced-features_impl_cycle.md  migration-and-advanced-features_plan_cycle.md  nested-project-disambiguation_impl.md  nested-project-disambiguation_impl_status.json  nested-project-disambiguation_plan.md  nested-project-disambiguation_plan_rounds.jsonl  onboarding-polish_impl_cycle.md  (+52 more)
prompts/: codex-pr-review.md
scripts/: README.md  project-helper.sh
tagteam/: __init__.py  __main__.py  auto_export.py  cli.py  config.py  cycle.py  db.py  divergence.py  dualwrite.py  iterm.py  migrate.py  parser.py  registry.py  repair.py  roadmap.py  server.py  session.py  setup.py  state.py  templates.py  watcher.py  watcher_events.py
templates/: cycle.md  decision_log.md  feedback.md  handoff_impl.md  handoff_plan.md  implementation_log.md  phase_plan.md  sync_state.md
tests/: __init__.py  test_auto_export.py  test_auto_export_hook.py  test_config.py  test_cycle.py  test_cycle_amend.py  test_cycle_baseline.py  test_cycle_dualwrite.py  test_db.py  test_divergence.py  test_dualwrite.py  test_iterm.py  test_migrate.py  test_parity_corpus.py  test_parser.py  test_project_root.py  test_quickstart.py  test_registry.py  test_repair.py  test_review_dialogue.py  test_roadmap.py  test_server_validation.py  test_session_adopt.py  test_stage_2_db_readers.py  test_state_diagnose.py  test_state_dualwrite.py  test_state_sync.py  test_state_watcher.py  test_templates.py  test_watcher.py  test_watcher_auto_detect.py  test_watcher_events.py
(+110 files in other folders)
