[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-handoff"
version = "0.1.0"
description = "A collaboration framework for structured AI-to-AI handoffs with human oversight"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ai-handoff = "ai_handoff.cli:main"
ai-handoff-setup = "ai_handoff.setup:cli"

[project.urls]
Homepage = "https://github.com/jblacketter/ai-handoff"
Documentation = "https://github.com/jblacketter/ai-handoff#readme"
Repository = "https://github.com/jblacketter/ai-handoff"

[tool.setuptools]
packages = ["ai_handoff"]
include-package-data = true

[tool.setuptools.package-data]
ai_handoff = [
    "data/.claude/skills/*.md",
    "data/templates/*.md",
    "data/checklists/*.md",
    "data/*.md",
]
