[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-handoff"
version = "0.1.0"
description = "A collaboration framework for structured AI-to-AI handoffs with human oversight"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
tui = ["textual>=1.0.0"]

[project.scripts]
ai-handoff = "ai_handoff.cli:main"
ai-handoff-setup = "ai_handoff.setup:cli"

[project.urls]
Homepage = "https://github.com/jblacketter/ai-handoff"
Documentation = "https://github.com/jblacketter/ai-handoff#readme"
Repository = "https://github.com/jblacketter/ai-handoff"

[tool.setuptools]
packages = ["ai_handoff", "ai_handoff.tui", "ai_handoff.tui.art", "ai_handoff.tui.conversations"]
include-package-data = true

[tool.setuptools.package-data]
ai_handoff = [
    "data/.claude/skills/*.md",
    "data/.claude/skills/**/*.md",
    "data/templates/*.md",
    "data/checklists/*.md",
    "data/*.md",
    "data/web/*.html",
    "data/web/*.css",
    "data/web/*.js",
    "tui/sounds/*.wav",
]
