[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagteam"
version = "0.6.0"
description = "A collaboration framework for structured AI-to-AI handoffs with human oversight"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
tui = ["textual>=1.0.0"]
event = ["watchdog>=3.0"]

[project.scripts]
tagteam = "tagteam.cli:main"
tagteam-setup = "tagteam.setup:cli"

[project.urls]
Homepage = "https://github.com/jblacketter/tagteam"
Documentation = "https://github.com/jblacketter/tagteam#readme"
Repository = "https://github.com/jblacketter/tagteam"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["tagteam", "tagteam.tui", "tagteam.tui.art", "tagteam.tui.conversations"]
include-package-data = true

[tool.setuptools.package-data]
tagteam = [
    "data/.claude/skills/*.md",
    "data/.claude/skills/**/*.md",
    "data/templates/*.md",
    "data/checklists/*.md",
    "data/*.md",
    "data/web/*.html",
    "data/web/*.css",
    "data/web/*.js",
    "tui/sounds/*.wav",
]
